# PyBoost

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
pyboost/: __init__.py  cli.py
pyboost/core/: __init__.py  builder.py  generator.py  pyboost.py  utils.py
pyboot/: cli.py
pyboot/core/: __init__.py  beautify.py  builder.py  environment.py  pyboot.py  reader.py  settings.py  templates.py
scripts/: requirements.txt
scripts/django_blank/: requirements.txt  secrets_conf_django.yaml  settings_django.py  settings_dynf_django.yaml
templates/django_blank/: cfg_django.gitignore  settings_django.py
tests/fixtures/: settings_with_name_test_project_.py
tests/units/: __init__.py  conftest.py  test_builder.py  test_cli.py  test_environment.py
