[tool.poetry]
name = "pyboost"
version = "0.1.0"
description = "Command line tool (CLI) aimed at accelerating the development of Python applications."
authors = ["Nícolas Albuquerque Ramos <nicolas.albu@outlook.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.scripts]
pyboost = "pyboost.cli:app"

[tool.poetry.dependencies]
python = "^3.10"
typer-cli = "^0.0.13"
rich = "^13.3.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^7.2.2"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
